changed default backend to CPU

--- a/examples/mlp/mnist-notebook.ipynb
+++ b/examples/mlp/mnist-notebook.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:53934c2eaf5b53a5a1a6430c8663f7e5a06fb17e9ed0721821de19964dceed9c"
+  "signature": "sha256:5b504019c4de40048417375915fc7ee96b090a1a47ebfc7bcae16acbb5e80763"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -86,9 +86,9 @@
       "    model = MLP(num_epochs=num_epochs, batch_size=128, layers=layers,\n",
       "                serialized_path=file_path)\n",
       "    # Uncomment line below to run on CPU backend\n",
-      "    # backend = gen_backend(rng_seed=0)\n",
+      "    backend = gen_backend(rng_seed=0)\n",
       "    # Uncomment line below to run on GPU using cudanet backend\n",
-      "    backend = gen_backend(rng_seed=0, gpu='cudanet')\n",
+      "    # backend = gen_backend(rng_seed=0, gpu='cudanet')\n",
       "    dataset = MNIST(repo_path='~/data/')\n",
       "    experiment = FitPredictErrorExperiment(model=model,\n",
       "                                           backend=backend,\n",
