--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 # ChangeLog
 
+## v1.1.3 (2015-12-01):
+
+### Modifications
+
+* deconvolution and weight historgram visualization examples and documentation
+* CPU convolution and pooling layer speedups (~2x faster)
+* bAbI question and answer interactive demo, dataset support.
+* various ImageLoader enhancements.
+* interactive usage improvements (shortcut Callback import, multiple Callbacks
+  init, doc updates, single item batch size support)
+* set default verbosity level to warning
+* CIFAR10 example normalization updates
+* CUDA detection enhancements [#132]
+* only parse batch_writer arguments when used as a script, allow undefined
+  global_mean [#137, #140]
+
 ## v1.1.2 (2015-11-17):
 
 ### Modifications
