--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 # ChangeLog
 
+## v1.1.4 (2015-12-14):
+
+### Modifications
+
+* Add support for bidirectional RNNs and LSTMs
+* added ELU, leaky ReLU activations
+* significantly faster GPU kernel builds (using ptx instead of cuda-c)
+* data shuffling enhancements, removal of old data loader code.
+* caffe conv, pool, dropout layer matching and compatibility flags
+* add scheduling support for RMSProp
+* callback enhancements, additional unit tests
+* documentation auditing, added links to introductory video tutorials
+
 ## v1.1.3 (2015-12-01):
 
 ### Modifications
