--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 # ChangeLog
 
+## v1.2.0 (2016-01-29):
+
+### Modifications
+
+* kepler GPU kernel support [#80]
+* new dataloader format, updated docs [#115, #170]
+* new serialization format
+* FastRCNN implementation, ROI pooling support [#135]
+* deep residual nets implementation and example
+* expanded model zoo
+* Ticker dataset and copy, repeat copy tasks
+* autodiff transport support [#173]
+* numerous bug fixes and documentation updates.
+
 ## v1.1.5 (2016-01-13):
 
 ### Modifications
