--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 # ChangeLog
 
+## v2.2.0 (2017-08-XX):
+
+* Update aeon to 1.0.0 including new version of manifest (doc/source/loading_data.rst#aeon-dataloader)
+
 ## v2.1.0 (2017-08-02):
 
 * Set MKL backend (-b mkl) as the default CPU backend on Linux (use -b cpu to specify original CPU backend)
